Made Ctrl-a working in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,10 @@ set -g mouse-select-window on
 # Set prefix to Ctrl-a instead of Ctrl-b
 set-option -g prefix C-a
 
+# Make Ctrl+a Ctrl+a jump to begin of line
+unbind-key C-b
+bind-key C-a send-prefix
+
 # Start window numbering with 1
 set -g base-index 1
 
