Avoid vim ESC delay in tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,3 +32,6 @@ set -g status-left '#[fg=blue]#H'
 set-window-option -g window-status-current-bg blue
 set-window-option -g window-status-current-fg black
 
+
+# Avoid delay when pressing ESC in vim inside tmux
+set -sg escape-time 0
